🛠 Arreglando errores de archivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
         @font-face {
             font-family: FontAwesome;
-            src: url(/fonts/FontAwesome.woff2) format("woff2");
+            src: url(./assets/fonts/FontAwesome.woff2) format("woff2");
             font-weight: 400;
             font-style: normal;
             font-display: swap
@@ -44,7 +44,7 @@
     <style>
         @font-face {
             font-family: clock;
-            src: url(../fonts/clock.woff);
+            src: url(./assets/fonts/clock.woff);
             font-display: swap
         }
 
@@ -266,7 +266,7 @@
     </div>
     <!-- <script src="./js/index.js"></script> -->
     <script
-        lang="javascript">var na = 0, txt = "EZEQUIEL_GATICA", speed = 150, redes = document.getElementById("redes"), espacio = document.getElementById("espacio"), navbar = document.getElementById("navbar"), botones = document.getElementById("botones"); function tW() { if (na < txt.length) { var txtPrint = txt.toUpperCase(); document.getElementById("text").innerHTML += txtPrint.charAt(na), na++, setTimeout(tW, speed) } setTimeout(() => { showRedes() }, 2500) } function showRedes() { redes.style.display = "block", espacio.style.display = "none", botones.style.display = "flex" }</script>
+        lang="javascript">var na = 0, txt = "EZEQUIEL_GATICA", speed = 150, redes = document.getElementById("redes"), espacio = document.getElementById("espacio"), navbar = document.getElementById("navbar"); function tW() { if (na < txt.length) { var txtPrint = txt.toUpperCase(); document.getElementById("text").innerHTML += txtPrint.charAt(na), na++, setTimeout(tW, speed) } setTimeout(() => { showRedes() }, 2500) } function showRedes() { redes.style.display = "block", espacio.style.display = "none" }</script>
 </body>
 
 </html>
