🐞 - Error en 404 solucionado (absolute url)

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: clock;
-            src: url(./assets/fonts/clock.woff);
+            src: url(/assets/fonts/clock.woff);
             font-display: swap
         }
 
@@ -97,7 +97,7 @@
         }
     </style>
 
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
     <title>Link no encontrado!</title>
     <meta name="description" content="Sitio web de Ezequiel Gatica">
