🐞 - Corrigiendo title de 404!

--- a/404.html
+++ b/404.html
@@ -99,7 +99,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
-    <title>Link no encontrado!</title>
+    <title>Pagina no encontrada!</title>
     <meta name="description" content="Sitio web de Ezequiel Gatica">
 </head>
 
