--- a/apps.html
+++ b/apps.html
@@ -75,9 +75,13 @@
             transition: .125s ease;
         }
 
-        card>p {
+        card > p {
             font-family: monospace;
             font-style: italic;
+        }
+
+        card > a {
+            text-transform: uppercase;
         }
 
         card:hover {
@@ -90,7 +94,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
     <title>
-        </Eze apps>
+        </Eze page='apps'>
     </title>
     <meta name="description" content="Aplicaciones de Ezequiel Gatica">
 </head>
