--- a/404.html
+++ b/404.html
@@ -3,179 +3,22 @@
 
 <head>
     <meta name="viewport" content="width=device-width">
-    <!-- <link rel="stylesheet" href="css/font-awesome-essential.css"> -->
-    <!-- <link rel="stylesheet" href="css/main.css"> -->
-    <style>
-        @font-face {
-            font-family: clock;
-            src: url(/assets/fonts/clock.woff);
-            font-display: swap
-        }
-
-        * {
-            overflow-y: hidden;
-            -webkit-font-smoothing: antialiased;
-            text-shadow: rgba(0, 0, 0, .01) 0 0 1px
-        }
-
-        ::selection {
-            color: #fff
-        }
-
-        :root {
-            --padd: 10px
-        }
-
-        html {
-            font-family: clock;
-            color: #0f0;
-            --s: 100px;
-            /* control the size */
-            --c1: #0f0;
-            --c2: #000;
-
-            --_s: calc(2*var(--s)) calc(2*var(--s));
-            --_g: var(--_s) conic-gradient(at 40% 40%, #0000 75%, var(--c1) 0);
-            --_p: var(--_s) conic-gradient(at 20% 20%, #0000 75%, var(--c2) 0);
-            background:
-                calc(.9*var(--s)) calc(.9*var(--s))/var(--_p),
-                calc(-.1*var(--s)) calc(-.1*var(--s))/var(--_p),
-                calc(.7*var(--s)) calc(.7*var(--s))/var(--_g),
-                calc(-.3*var(--s)) calc(-.3*var(--s))/var(--_g),
-                conic-gradient(from 90deg at 20% 20%, var(--c2) 25%, var(--c1) 0) 0 0/var(--s) var(--s);
-            animation: move 3s infinite;
-        }
-
-        @keyframes move {
-            0% {
-                background-position:
-                    calc(.9*var(--s)) calc(.9*var(--s)),
-                    calc(-.1*var(--s)) calc(-.1*var(--s)),
-                    calc(.7*var(--s)) calc(.7*var(--s)),
-                    calc(-.3*var(--s)) calc(-.3*var(--s)), 0 0
-            }
-
-            25% {
-                background-position:
-                    calc(1.9*var(--s)) calc(.9*var(--s)),
-                    calc(-1.1*var(--s)) calc(-.1*var(--s)),
-                    calc(1.7*var(--s)) calc(.7*var(--s)),
-                    calc(-1.3*var(--s)) calc(-.3*var(--s)), 0 0
-            }
-
-            50% {
-                background-position:
-                    calc(1.9*var(--s)) calc(-.1*var(--s)),
-                    calc(-1.1*var(--s)) calc(.9*var(--s)),
-                    calc(1.7*var(--s)) calc(-.3*var(--s)),
-                    calc(-1.3*var(--s)) calc(.7*var(--s)), 0 0
-            }
-
-            75% {
-                background-position:
-                    calc(2.9*var(--s)) calc(-.1*var(--s)),
-                    calc(-2.1*var(--s)) calc(.9*var(--s)),
-                    calc(2.7*var(--s)) calc(-.3*var(--s)),
-                    calc(-2.3*var(--s)) calc(.7*var(--s)), 0 0
-            }
-
-            100% {
-                background-position:
-                    calc(2.9*var(--s)) calc(-1.1*var(--s)),
-                    calc(-2.1*var(--s)) calc(1.9*var(--s)),
-                    calc(2.7*var(--s)) calc(-1.3*var(--s)),
-                    calc(-2.3*var(--s)) calc(1.7*var(--s)), 0 0
-            }
-        }
-
-        body {
-            font-family: clock;
-            color: #0f0;
-            margin: 0;
-            padding: 0;
-            background: rgba(0, 0, 0, .95);
-
-        }
-
-        .landing {
-            display: inline-flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            min-height: 100vh;
-            text-align: center
-        }
-
-        .landing #text {
-            max-width: 100%;
-            overflow: hidden;
-            margin: 0 auto;
-            letter-spacing: .15em
-        }
-
-        #text::after {
-            content: "|";
-            animation: .5s pimpum ease infinite
-        }
-
-        #text2 {
-            text-decoration: underline;
-        }
-
-        @keyframes pimpum {
-            0% {
-                opacity: 0
-            }
-
-            100% {
-                opacity: 1
-            }
-        }
-
-        a {
-            color: #0f0;
-            font-family: monospace
-        }
-
-        a:hover {
-            color: #fff !important
-        }
-
-        .rrss {
-            animation: 2s pimpum;
-            font-size: 24px;
-            padding-left: var(--padd);
-            padding-right: var(--padd)
-        }
-
-        #navbar {
-            animation: 2s pimpum
-        }
-
-        .fa {
-            font-size: 24px !important
-        }
-    </style>
-
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="preload" href="./assets/styles/root.css" as="style" onload="this.rel='stylesheet'" />
     <meta name="theme-color" content="#00ff00" />
-    <title><Eze error='404'/></title>
+    <title>
+        <Eze error='404' />
+    </title>
     <meta name="description" content="Sitio web de Ezequiel Gatica">
 </head>
 
 <body onload="tW();">
-    <div class="landing">
-        <h1 id="text"><noscript>ESTAMOS_PERDIDOS?</noscript></h1>
+    <main>
+        <h1 id="typewrite"><noscript>ESTAMOS_PERDIDOS?</noscript></h1>
         <a href="/" style="font-family: inherit; font-size: inherit">
             <h3 id="text2"><noscript>VOLVER_A_LA_PAGINA_PRINCIPAL</noscript></h3>
         </a>
-        <br />
-        <div id="espacio">
-            <a target="_blank" rel="noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-                style="color: transparent">:P</a>
-        </div>
-    </div>
+    </main>
     <script>
         var na = 0;
         var txt = "ESTAMOS_PERDIDOS?";
@@ -185,7 +28,7 @@
             if (na < txt2.length + window.location.href.length) {
                 var txtPrint = txt.toUpperCase();
                 var txtPrint2 = txt2.toUpperCase();
-                document.getElementById("text").innerHTML += txtPrint.charAt(na);
+                document.getElementById("typewrite").innerHTML += txtPrint.charAt(na);
                 document.getElementById("text2").innerHTML += txtPrint2.charAt(na);
                 na++;
                 setTimeout(tW, speed);
