--- a/apps.html
+++ b/apps.html
@@ -3,154 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width">
-    <style>
-        @font-face {
-            font-family: clock;
-            src: url(./assets/fonts/clock.woff);
-            font-display: swap
-        }
-
-        ::selection {
-            color: #fff
-        }
-
-        html {
-            font-family: clock;
-            color: #0f0;
-            --s: 100px;
-            /* control the size */
-            --c1: #0f0;
-            --c2: #000;
-
-            --_s: calc(2*var(--s)) calc(2*var(--s));
-            --_g: var(--_s) conic-gradient(at 40% 40%, #0000 75%, var(--c1) 0);
-            --_p: var(--_s) conic-gradient(at 20% 20%, #0000 75%, var(--c2) 0);
-            background:
-                calc(.9*var(--s)) calc(.9*var(--s))/var(--_p),
-                calc(-.1*var(--s)) calc(-.1*var(--s))/var(--_p),
-                calc(.7*var(--s)) calc(.7*var(--s))/var(--_g),
-                calc(-.3*var(--s)) calc(-.3*var(--s))/var(--_g),
-                conic-gradient(from 90deg at 20% 20%, var(--c2) 25%, var(--c1) 0) 0 0/var(--s) var(--s);
-            animation: move 3s infinite;
-        }
-
-        @keyframes move {
-            0% {
-                background-position:
-                    calc(.9*var(--s)) calc(.9*var(--s)),
-                    calc(-.1*var(--s)) calc(-.1*var(--s)),
-                    calc(.7*var(--s)) calc(.7*var(--s)),
-                    calc(-.3*var(--s)) calc(-.3*var(--s)), 0 0
-            }
-
-            25% {
-                background-position:
-                    calc(1.9*var(--s)) calc(.9*var(--s)),
-                    calc(-1.1*var(--s)) calc(-.1*var(--s)),
-                    calc(1.7*var(--s)) calc(.7*var(--s)),
-                    calc(-1.3*var(--s)) calc(-.3*var(--s)), 0 0
-            }
-
-            50% {
-                background-position:
-                    calc(1.9*var(--s)) calc(-.1*var(--s)),
-                    calc(-1.1*var(--s)) calc(.9*var(--s)),
-                    calc(1.7*var(--s)) calc(-.3*var(--s)),
-                    calc(-1.3*var(--s)) calc(.7*var(--s)), 0 0
-            }
-
-            75% {
-                background-position:
-                    calc(2.9*var(--s)) calc(-.1*var(--s)),
-                    calc(-2.1*var(--s)) calc(.9*var(--s)),
-                    calc(2.7*var(--s)) calc(-.3*var(--s)),
-                    calc(-2.3*var(--s)) calc(.7*var(--s)), 0 0
-            }
-
-            100% {
-                background-position:
-                    calc(2.9*var(--s)) calc(-1.1*var(--s)),
-                    calc(-2.1*var(--s)) calc(1.9*var(--s)),
-                    calc(2.7*var(--s)) calc(-1.3*var(--s)),
-                    calc(-2.3*var(--s)) calc(1.7*var(--s)), 0 0
-            }
-        }
-        
-        body {
-            font-family: clock;
-            background: rgba(0, 0, 0, .95);
-            color: #0f0;
-            margin: 0;
-            padding: 0;
-            overflow-y: hidden;
-            -webkit-font-smoothing: antialiased;
-            text-shadow: rgba(0, 0, 0, .01) 0 0 1px
-        }
-
-        main {
-            display: inline-flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            min-height: 100vh;
-            text-align: center
-        }
-
-        main>h1 {
-            max-width: 100%;
-            overflow: hidden;
-            margin: 0 auto;
-            margin-bottom: 2rem;
-            letter-spacing: .15em
-        }
-
-        main>h1::after {
-            content: "|";
-            animation: .5s titilar ease infinite
-        }
-
-        @keyframes titilar {
-            0% {
-                opacity: 0
-            }
-
-            100% {
-                opacity: 1
-            }
-        }
-
-        card-container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            grid-gap: 1.5rem;
-            padding: 1rem;
-        }
-
-        card {
-            background: #000;
-            padding: 1rem;
-            border-radius: 5px;
-            box-shadow: 0 0 10px #fff;
-            text-align: center;
-            transition: .125s ease;
-        }
-
-        card>p {
-            font-family: monospace;
-            font-style: italic;
-        }
-
-        card>a {
-            text-transform: uppercase;
-        }
-
-        card:hover {
-            box-shadow: 0 0 20px #fff;
-            animation: 1s beam ease infinite;
-        }
-    </style>
-
+    <link rel="preload" href="./assets/styles/root.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="preload" href="./assets/styles/apps.css" as="style" onload="this.rel='stylesheet'" />
     <link rel="preload" href="./assets/fonts/clock.woff" as="font" type="font/woff2" crossorigin />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
@@ -162,7 +16,7 @@
 
 <body>
     <main>
-        <h1>Apps</h1>
+        <h1 id="typewrite">Apps</h1>
         <card-container>
             <card>
                 <h2>App 1</h2>
