--- a/index.html
+++ b/index.html
@@ -3,219 +3,11 @@
 
 <head>
     <meta name="viewport" content="width=device-width">
-    <style>
-        @font-face {
-            font-family: FontAwesome;
-            src: url(./assets/fonts/FontAwesome.woff2) format("woff2");
-            font-weight: 400;
-            font-style: normal;
-            font-display: swap
-        }
-
-        .fa {
-            display: inline-block;
-            font: normal normal normal 14px/1 FontAwesome;
-            font-size: inherit;
-            text-rendering: auto;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale
-        }
-
-        .fa-github:before {
-            content: "\f09b"
-        }
-
-        .fa-twitter:before {
-            content: "\f099"
-        }
-
-        .fa-linkedin-square:before {
-            content: "\f08c"
-        }
-
-        .fa-instagram:before {
-            content: "\f16d"
-        }
-
-        .fa-folder:before {
-            content: "\f07b"
-        }
-    </style>
-    <style>
-        @font-face {
-            font-family: clock;
-            src: url(./assets/fonts/clock.woff);
-            font-display: swap
-        }
-
-        * {
-            overflow-y: hidden;
-            -webkit-font-smoothing: antialiased;
-            text-shadow: rgba(0, 0, 0, .01) 0 0 1px
-        }
-
-        ::selection {
-            color: #fff
-        }
-
-        :root {
-            --padd: 10px
-        }
-
-        html {
-            font-family: clock;
-            color: #0f0;
-            --s: 100px;
-            /* control the size */
-            --c1: #0f0;
-            --c2: #000;
-
-            --_s: calc(2*var(--s)) calc(2*var(--s));
-            --_g: var(--_s) conic-gradient(at 40% 40%, #0000 75%, var(--c1) 0);
-            --_p: var(--_s) conic-gradient(at 20% 20%, #0000 75%, var(--c2) 0);
-            background:
-                calc(.9*var(--s)) calc(.9*var(--s))/var(--_p),
-                calc(-.1*var(--s)) calc(-.1*var(--s))/var(--_p),
-                calc(.7*var(--s)) calc(.7*var(--s))/var(--_g),
-                calc(-.3*var(--s)) calc(-.3*var(--s))/var(--_g),
-                conic-gradient(from 90deg at 20% 20%, var(--c2) 25%, var(--c1) 0) 0 0/var(--s) var(--s);
-            animation: move 3s infinite;
-        }
-
-        @keyframes move {
-            0% {
-                background-position:
-                    calc(.9*var(--s)) calc(.9*var(--s)),
-                    calc(-.1*var(--s)) calc(-.1*var(--s)),
-                    calc(.7*var(--s)) calc(.7*var(--s)),
-                    calc(-.3*var(--s)) calc(-.3*var(--s)), 0 0
-            }
-
-            25% {
-                background-position:
-                    calc(1.9*var(--s)) calc(.9*var(--s)),
-                    calc(-1.1*var(--s)) calc(-.1*var(--s)),
-                    calc(1.7*var(--s)) calc(.7*var(--s)),
-                    calc(-1.3*var(--s)) calc(-.3*var(--s)), 0 0
-            }
-
-            50% {
-                background-position:
-                    calc(1.9*var(--s)) calc(-.1*var(--s)),
-                    calc(-1.1*var(--s)) calc(.9*var(--s)),
-                    calc(1.7*var(--s)) calc(-.3*var(--s)),
-                    calc(-1.3*var(--s)) calc(.7*var(--s)), 0 0
-            }
-
-            75% {
-                background-position:
-                    calc(2.9*var(--s)) calc(-.1*var(--s)),
-                    calc(-2.1*var(--s)) calc(.9*var(--s)),
-                    calc(2.7*var(--s)) calc(-.3*var(--s)),
-                    calc(-2.3*var(--s)) calc(.7*var(--s)), 0 0
-            }
-
-            100% {
-                background-position:
-                    calc(2.9*var(--s)) calc(-1.1*var(--s)),
-                    calc(-2.1*var(--s)) calc(1.9*var(--s)),
-                    calc(2.7*var(--s)) calc(-1.3*var(--s)),
-                    calc(-2.3*var(--s)) calc(1.7*var(--s)), 0 0
-            }
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            background: rgba(0, 0, 0, .95);
-        }
-
-        .landing {
-            display: inline-flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            width: 100%;
-            min-height: 100vh;
-            text-align: center
-        }
-
-        .landing #text {
-            max-width: 100%;
-            overflow: hidden;
-            margin: 0 auto;
-            letter-spacing: .15em
-        }
-
-        #text::after {
-            content: "|";
-            animation: .5s pimpum ease infinite
-        }
-
-        @keyframes pimpum {
-            0% {
-                opacity: 0
-            }
-
-            100% {
-                opacity: 1
-            }
-        }
-
-        a {
-            color: #0f0;
-            font-family: monospace
-        }
-
-        a:hover {
-            color: #fff !important
-        }
-
-        .rrss {
-            animation: 2s pimpum;
-            font-size: 24px;
-            padding-left: var(--padd);
-            padding-right: var(--padd)
-        }
-
-        #botones {
-            animation: 2s pimpum;
-        }
-
-        .fa {
-            font-size: 24px !important
-        }
-
-        .musica {
-            position: absolute;
-        }
-
-        .musica>span {
-            text-transform: uppercase;
-        }
-
-
-        #sp_cover {
-            width: 64px;
-            height: 64px;
-            border-radius: 50%;
-            /* make it spin */
-            animation: spin 15s linear infinite;
-        }
-
-        @keyframes spin {
-            0% {
-                transform: rotate(0deg)
-            }
-
-            100% {
-                transform: rotate(360deg)
-            }
-        }
-    </style>
-
     <link rel="preload" href="./assets/fonts/FontAwesome.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./assets/fonts/clock.woff" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="./assets/styles/home.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="preload" href="./assets/styles/root.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="preload" href="./assets/styles/font-awesome.css" as="style" onload="this.rel='stylesheet'" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
     <title>
@@ -235,8 +27,8 @@
     </div>
 
 
-    <div class="landing">
-        <h1 id="text"><noscript>EZEQUIEL_GATICA</noscript></h1>
+    <main>
+        <h1 id="typewrite"><noscript>EZEQUIEL_GATICA</noscript></h1>
         <br />
         <noscript>
             <div id="redes">
@@ -264,14 +56,14 @@
             <a target="_blank" rel="noreferrer" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
                 style="color: transparent">:P</a>
         </div>
-    </div>
+    </main>
     <script lang="javascript">
         var na = 0, txt = "EZEQUIEL_GATICA", speed = 150, redes = document.getElementById("redes"), espacio = document.getElementById("espacio");
         function init() { tW(); spotify(); }
         function tW() {
             if (na < txt.length) {
                 var txtPrint = txt.toUpperCase();
-                document.getElementById("text").innerHTML += txtPrint.charAt(na);
+                document.getElementById("typewrite").innerHTML += txtPrint.charAt(na);
                 na++;
                 setTimeout(tW, speed)
             }
