Arreglando temitas de css

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="preload" href="./assets/styles/root.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="stylesheet" href="./assets/styles/root.css" />
     <meta name="theme-color" content="#00ff00" />
     <title>
         <Eze error='404' />
