--- a/apps.html
+++ b/apps.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width">
-    <link rel="preload" href="./assets/styles/root.css" as="style" onload="this.rel='stylesheet'" />
-    <link rel="preload" href="./assets/styles/apps.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="stylesheet" href="./assets/styles/root.css" />
+    <link rel="stylesheet" href="./assets/styles/apps.css" />
     <link rel="preload" href="./assets/fonts/clock.woff" as="font" type="font/woff2" crossorigin />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
