--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width">
     <link rel="preload" href="./assets/fonts/FontAwesome.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="./assets/fonts/clock.woff" as="font" type="font/woff2" crossorigin />
-    <link rel="preload" href="./assets/styles/home.css" as="style" onload="this.rel='stylesheet'" />
-    <link rel="preload" href="./assets/styles/root.css" as="style" onload="this.rel='stylesheet'" />
-    <link rel="preload" href="./assets/styles/font-awesome.css" as="style" onload="this.rel='stylesheet'" />
+    <link rel="stylesheet" href="./assets/styles/home.css" />
+    <link rel="stylesheet" href="./assets/styles/root.css" />
+    <link rel="stylesheet" href="./assets/styles/font-awesome.css" />
     <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
     <title>
