Rehaciendo la navegación

--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
         <a id="sp_album" target="_blank"></a>
     </div>
 
+    <div class="go-forward">
+        <a href="./proyectos" target="_self" rel="noopener noreferrer">
+            PROYECTOS >
+        </a>
+    </div>
 
     <main>
         <h1 id="typewrite"><noscript>EZEQUIEL_GATICA</noscript></h1>
@@ -43,13 +48,13 @@
             </div>
         </noscript>
         <div id="redes" style="display: none;">
-            <a target="_blank" rel="noreferrer" href="https://twitter.com/ezegaticaa" title="twitter"><i
+            <a target="_blank" rel="noreferrer" href="https://twitter.com/ezegaticaa" title="Twitter"><i
                     class="fa fa-twitter rrss"></i></a>
-            <a target="_blank" rel="noreferrer" href="https://instagram.com/ezegaticaa" title="instagram"><i
+            <a target="_blank" rel="noreferrer" href="https://instagram.com/ezegaticaa" title="Instagram"><i
                     class="fa fa-instagram rrss"></i></a>
-            <a target="_blank" rel="noreferrer" href="https://github.com/ezegatica" title="github"><i
+            <a target="_blank" rel="noreferrer" href="https://github.com/ezegatica" title="GitHub"><i
                     class="fa fa-github rrss"></i></a>
-            <a target="_blank" rel="noreferrer" href="https://linkedin.com/in/ezeg" title="linkedin"><i
+            <a target="_blank" rel="noreferrer" href="https://linkedin.com/in/ezeg" title="LinkedIn"><i
                     class="fa fa-linkedin-square rrss"></i></a>
         </div>
         <div id="espacio">
