--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -3,25 +3,30 @@
 
 <head>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="./assets/styles/root.css" />
-    <link rel="stylesheet" href="./assets/styles/apps.css" />
-    <link rel="preload" href="./assets/fonts/clock.woff" as="font" type="font/woff2" crossorigin />
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../assets/styles/root.css" />
+    <link rel="stylesheet" href="../assets/styles/proyectos.css" />
+    <link rel="preload" href="../assets/fonts/clock.woff" as="font" type="font/woff2" crossorigin />
+    <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
     <title>
-        </Eze page='apps'>
+        </Eze page='proyectos'>
     </title>
-    <meta name="description" content="Aplicaciones de Ezequiel Gatica">
+    <meta name="description" content="Proyectos de Ezequiel Gatica">
 </head>
 
 <body>
+    <div class="go-back">
+        <a href="/" target="_self" rel="noopener noreferrer">
+            < GO BACK
+        </a>
+    </div>
     <main>
-        <h1 id="typewrite">Apps</h1>
+        <h1 id="typewrite">PROYECTOS</h1>
         <card-container>
             <card>
-                <h2>App 1</h2>
+                <h2>SITIO DE VENTAS</h2>
                 <p>App 1 description</p>
-                <a href="https://ezegatica.com" target="_blank" rel="noopener noreferrer">Go to app 1</a>
+                <a href="ventas" target="_self" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
                 <h2>App 2</h2>
