proyectos: Publicacion de ventas

--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="go-back">
         <a href="/" target="_self" rel="noopener noreferrer">
-            < GO BACK
+            < ATRAS
         </a>
     </div>
     <main>
@@ -25,13 +25,13 @@
         <card-container>
             <card>
                 <h2>SITIO DE VENTAS</h2>
-                <p>App 1 description</p>
-                <a href="ventas" target="_self" rel="noopener noreferrer">Mas información</a>
+                <p>Sitio de compra de productos, los cuales son vendidos por mi. Una especie de venta de garage online con contacto directo al dueño.</p>
+                <a href="./ventas" target="_self" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
-                <h2>App 2</h2>
-                <p>App 2 description</p>
-                <a href="https://ezegatica.com" target="_blank" rel="noopener noreferrer">Go to app 2</a>
+                <h2>BOT DE DISCORD</h2>
+                <p>Herramienta de diversión privada para servidores de Discord. Contiene juegos y experimentos utilizando la api publica de la plataforma.</p>
+                <a href="./bot-de-discord" target="_blank" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
                 <h2>App 3</h2>
