fix: Arreglando links

--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -26,12 +26,12 @@
             <card>
                 <h2>SITIO DE VENTAS</h2>
                 <p>Sitio de compra de productos, los cuales son vendidos por mi. Una especie de venta de garage online con contacto directo al dueño.</p>
-                <a href="./ventas" target="_self" rel="noopener noreferrer">Mas información</a>
+                <a href="/proyectos/ventas" target="_self" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
                 <h2>BOT DE DISCORD</h2>
                 <p>Herramienta de diversión privada para servidores de Discord. Contiene juegos y experimentos utilizando la api publica de la plataforma.</p>
-                <a href="./bot-de-discord" target="_blank" rel="noopener noreferrer">Mas información</a>
+                <a href="/proyectos/bot-de-discord" target="_blank" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
                 <h2>App 3</h2>
