--- a/proyectos/ventas/index.html
+++ b/proyectos/ventas/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="go-back">
-        <a href="../" target="_self" rel="noopener noreferrer">
+        <a href="/proyectos/" target="_self" rel="noopener noreferrer">
             < GO BACK </a>
     </div>
     <main>
