fix: Arreglando metadata de proyecto/ventas

--- a/proyectos/ventas/index.html
+++ b/proyectos/ventas/index.html
@@ -10,9 +10,9 @@
     <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#00ff00" />
     <title>
-        </Eze page='proyectos'>
+        </Eze proyecto='ventas'>
     </title>
-    <meta name="description" content="Proyectos de Ezequiel Gatica">
+    <meta name="description" content="Proyectos de Ezequiel Gatica: Ventas, un sitio de ventas de garage.">
 </head>
 
 <body>
