--- a/proyectos/ventas/index.html
+++ b/proyectos/ventas/index.html
@@ -88,7 +88,7 @@
             </p>
         </article>
     </main>
-    <script src="../open-img-on-click.js"></script>
+    <script src="/proyectos/open-img-on-click.js"></script>
 </body>
 
 </html>
