--- a/proyectos/ventas/index.html
+++ b/proyectos/ventas/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="go-back">
         <a href="/proyectos/" target="_self" rel="noopener noreferrer">
-            < GO BACK </a>
+            < ATRAS </a>
     </div>
     <main>
         <h1 id="typewrite">VENTAS</h1>
@@ -89,6 +89,7 @@
         </article>
     </main>
     <script src="/proyectos/open-img-on-click.js"></script>
+    <script src="/aviso.js"></script>
 </body>
 
 </html>
