--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -17,28 +17,29 @@
 <body>
     <div class="go-back">
         <a href="/" target="_self" rel="noopener noreferrer">
-            < ATRAS
-        </a>
+            < ATRAS </a>
     </div>
     <main>
         <h1 id="typewrite">PROYECTOS</h1>
         <card-container>
             <card>
+                <h2>LISTO</h2>
+                <p>(2020) Aplicación web y móvil que permite al usuario realizar un pedido de comida y retirarlo por sus
+                    propios medios. Buscaba evitar demoras y eliminar filas de espera.
+                </p>
+                <a href="/proyectos/listo" target="_self" rel="noopener noreferrer">Mas información</a>
+            </card>
+            <card>
                 <h2>SITIO DE VENTAS</h2>
-                <p>Sitio de compra de productos, los cuales son vendidos por mi. Una especie de venta de garage online con contacto directo al dueño.</p>
+                <p>Sitio de compra de productos, los cuales son vendidos por mi. Una especie de venta de garage online
+                    con contacto directo al dueño.</p>
                 <a href="/proyectos/ventas" target="_self" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
                 <h2>BOT DE DISCORD</h2>
-                <p>Herramienta de diversión privada para servidores de Discord. Contiene juegos y experimentos utilizando la api publica de la plataforma.</p>
+                <p>Herramienta de diversión privada para servidores de Discord. Contiene juegos y experimentos
+                    utilizando la api publica de la plataforma.</p>
                 <a href="/proyectos/bot-de-discord" target="_blank" rel="noopener noreferrer">Mas información</a>
-            </card>
-            <card>
-                <h2>App 3</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, dolore! Dicta, corporis nostrum vel
-                    modi minima reprehenderit maxime, saepe quas velit libero eos culpa harum dolores, provident
-                    assumenda praesentium tempora.</p>
-                <a href="https://ezegatica.com" target="_blank" rel="noopener noreferrer">Go to app 3</a>
             </card>
         </card-container>
     </main>
