Agregando a Tracking Trucks

--- a/proyectos/index.html
+++ b/proyectos/index.html
@@ -30,17 +30,24 @@
                 <a href="/proyectos/listo" target="_self" rel="noopener noreferrer">Mas información</a>
             </card>
             <card>
+                <h2>TRACKING TRUCKS</h2>
+                <p>(2021) Sistema de gestión y mantenimiento de flotas de transporte logisticos. Permite el acceso a la
+                    informacion que bridnan los distintos sensores del vehiculo.</p>
+                <a href="/proyectos/trackingtrucks" target="_self" rel="noopener noreferrer">Mas información</a>
+            </card>
+            <card>
                 <h2>SITIO DE VENTAS</h2>
-                <p>Sitio de compra de productos, los cuales son vendidos por mi. Una especie de venta de garage online
+                <p>(2022+) Sitio de compra de productos, los cuales son vendidos por mi. Una especie de venta de garage
+                    online
                     con contacto directo al dueño.</p>
                 <a href="/proyectos/ventas" target="_self" rel="noopener noreferrer">Mas información</a>
             </card>
-            <card>
+            <!-- <card>
                 <h2>BOT DE DISCORD</h2>
                 <p>Herramienta de diversión privada para servidores de Discord. Contiene juegos y experimentos
                     utilizando la api publica de la plataforma.</p>
                 <a href="/proyectos/bot-de-discord" target="_blank" rel="noopener noreferrer">Mas información</a>
-            </card>
+            </card> -->
         </card-container>
     </main>
     <script src="/aviso.js"></script>
