Renombrando archivos de CV para tener mas visibilidad

--- a/cv-en.html
+++ b/cv-en.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <embed src="/assets/cv/en/cv.pdf" width="100%" height="100%" type='application/pdf' />
+    <embed src="/assets/cv/en/Ezequiel Gatica - CV [en].pdf" width="100%" height="100%" type='application/pdf' />
 </body>
 
 </html>
