--- a/cv.html
+++ b/cv.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-    <embed src="/assets/cv/es/cv.pdf" width="100%" height="100%" type='application/pdf' />
+    <embed src="/assets/cv/es/Ezequiel Gatica - CV [es].pdf" width="100%" height="100%" type='application/pdf' />
 </body>
 
 </html>
