--- a/assets/cv/es/index.html
+++ b/assets/cv/es/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Ezequiel Gatica Indice de CVs (Español)</h1>
     <ul>
+        <li><a href="/assets/cv"><<<</a></li>
         <li><a href="/assets/cv/es/cv-dic-2021.pdf">Diciembre 2021</a></li>
         <li><a href="/assets/cv/es/cv-ene-2023.pdf">Enero 2023</a></li>
         <li><a href="/assets/cv/es/cv-may-2024.pdf">Mayo 2024 (actual)</a></li>
