--- a/assets/cv/index.html
+++ b/assets/cv/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Ezequiel Gatica CV Index</h1>
     <ul>
+        <li><a href="/"><<<</a></li>
         <li><a href="/assets/cv/es/">Español</a></li>
         <li><a href="/assets/cv/en/">English</a></li>
     </ul>
